<?xml version="1.0" encoding="utf-8"?>
<resources>
    android:hint="@string/prompt_login"

    <string name="app_name">UComplex</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">uComplex</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">Неверные данные</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Пароль слишком которткий</string>
    <string name="error_incorrect_password">Пароль должен состоять из 3 и более символов</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="devices">devices_desc</string>
    <string name="action_forgot_pass">Забыли пароль?</string>
    <string name="uc_description">Добро пожаловать\n в uComplex</string>
    <string name="title_activity_events">EventsActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="department_string">Кафедра: </string>
    <string name="average_mark_string">Средний балл:</string>
    <string name="attendance_string">Посещаемость по предмету:</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="title_activity_questionare">QuestionareActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_my_files">Материалы</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="reference_descr">Сформулируйте, пожалуйста, Ваш заказ на справку, заполнив предлагаемую форму.</string>
    <string name="org_name">Название организации:</string>
    <string name="reference_info">Точное название организации, куда предоставляется справка (предварительно уточните полное наименование). Формулировка \"по месту требования\" не допускается (информация доступна только сотруднику, обрабатывающему Вашу заявку).</string>
    <string name="reference_palce">Место предоставление справки:</string>
    <string name="send_button">Отправить</string>
    <string name="reference_more_info">* Если Вам необходимо предоставить справку в разные организации, то заполните, пожалуйста, форму несколько раз (для каждой организации соответственно). Указывайте полное и точное наименование организации, куда предоставляется справка. Размещайте Ваши заказы на изготовление всех документов заблаговременно. Учитывайте, что средний срок подготовки справки - порядка 3 дней.</string>


    <string-array name="reference_places_array">
        <item>Налоговые органы РФ</item>
        <item>По месту работы родителей</item>
        <item>По месту работы (справка-вызов)</item>
        <item>Другой вуз, планирую переводиться (справка об успеваемости)</item>
    </string-array>


    <string name="title_activity_users">UsersActivity</string>
    <string name="loadmore_string">Загрузить еще</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar_show_all">Показать все</string>
    <string name="title_activity_calendar_day">CalendarDayActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_new_number">Новый номер (без пробелов)</string>
    <string name="title_activity_message">Сообщения</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="refresh_str">Обновить</string>
    <string name="add_file_str">Добавить файл</string>
    <string name="add_folder_str">Добавить папку</string>
    <string name="menu_rename_str">Переименовать</string>
    <string name="menu_delete_str">Удалить</string>
    <string name="dialog_enter_name_str">Введите название</string>
    <string name="search_str">Поиск</string>
    <string name="title_activity_role_select">Выберите роль</string>
    <string name="student_str">Студент</string>
    <string name="role_tow_str">Вторая роль</string>
    <string name="role_one_str">Первая роль</string>
    <string name="third_role_str">Третья роль</string>
    <string name="logout_str">Выйти</string>

    <string name="sotrudnik">Сотрудник</string>
    <string name="administrator">Администратор</string>
    <string name="sub_administrator">Суб-Администратор</string>
    <string name="prepodvatel">Преподаватель</string>
    <string name="student">Студент</string>
    <string name="metodist_po_raspisaniyu">Методист по расписанию</string>
    <string name="metodist_ko">Методист КО</string>
    <string name="bibliotekar">Библиотекарь</string>
    <string name="tehsekretar">Техсекретарь</string>
    <string name="abiturient">Абитуриент</string>
    <string name="uchebny_otdel">Учебный отдел</string>
    <string name="rukovoditel">Руководитель</string>
    <string name="monitoring">Мониторинг</string>
    <string name="dekan">Декан</string>
    <string name="otdel_kadrov">Отдел кадров</string>
    <string name="info_str">Информация</string>
    <string name="title_activity_calendar2">CalendarActivity2</string>
    <string name="progile_picture">Profile picture</string>
    <string name="add_as_friend_str_ru">В друзья</string>
    <string name="message_str">Сообщение</string>
    <string name="block_str_ru">Блокировка</string>
    <string name="teachers_str_ru">Преподаватели</string>
    <string name="marks_str_ru">"Средняя успеваемость: %1$s"</string>
    <string name="attendance_str_ru">"Посещение по предмету: %1$s"</string>
    <string name="statistics_str_ru">Статистика</string>
    <string name="do_not_show_in_search_str_ru">Не отображать в поиске</string>
    <string name="short_bio_str_ru">Краткая биография</string>
    <string name="math_str_rus">Математика</string>
    <string name="upqualification_str_ru">Повышение квалификации и переподготовка (с указанием номер свидетельства)</string>
    <string name="teaching_subjects_str_ru">Преподаваемые дисциплины</string>
    <string name="study_degree_str_ru">Ученая степень</string>
    <string name="edu_stepen_str_ru">Ученое звание</string>
    <string name="study_degree2_str_ru">Ученая степень</string>
    <string name="current_semester_str_ru">Текущий семестр</string>
    <string name="no_internet_str">Пожалуйста, проверьте ваше интернет соединение</string>
    <string name="no_content_str">Нет контента для отображения</string>
    <string name="no_dilogs_str">Нет диалогов</string>
    <string name="subjects_str">Дисциплины</string>
    <string name="title_activity_profile_statistics">ProfileStatisticsActivity</string>
    <string name="title_activity_protocol">ProtocolActivity</string>
    <string name="save_str">Сохранить</string>
    <string name="disciplines">Преподаваемые дисциплины:</string>
    <string name="disciplines_in_timetable">Дисциплины в расписании:</string>
    <string name="study_rank">Ученое звание:</string>
    <string name="upqualifications">Повышение квалификации и переподготовка:</string>
    <string name="short_bio">Краткая биография:</string>
    <string name="not_specified">не указанно</string>


    <!--Rating-->
    <string name="question1">Сколько времени Вы уделяете подготовке к семинарам данного преподавателя?</string>
    <string name="question2">Насколько часто Вы посещаете дисциплины данного преподавателя?</string>
    <string name="question3">Насколько преподаватель владеет содержанием учебного материала?</string>
    <string name="question4">Оказывает ли преподаватель помощь обучающимся в освоении учебного материала во внеучебное время?</string>
    <string name="question5">Насколько преподаватель умеет увлечь своим предметом?</string>
    <string name="question6">Насколько преподаватель объективен в оценке знаний студентов?</string>
    <string name="question7">Пользуется ли преподаватель мультимедийными средствами или полезными раздаточными и дополнительными материалами?</string>
    <string name="question8">Приводит ли преподаватель практические примеры применения преподаваемых теоретических знаний?</string>
    <string name="question9">Насколько манера изложения позволяет усвоить и зафиксировать материал?</string>
    <string name="question10">Насколько внешний вид преподавателя соответствует желаемому образу преподавателя?</string>
    <string name="questionHint1">1 - не готовлюсь совсем, 10 - готовлюсь и изучаю дополнительный материал</string>
    <string name="questionHint2">1 - не посещаю совсем, 10 - посещаю 90% занятий и более</string>
    <string name="questionHint3">1 - не разбирается, 10 - отлично владеет</string>
    <string name="questionHint4">1 - не оказывает, 10 - оказывает помощь всем</string>
    <string name="questionHint5">1 - не умеет увлечь, 10 - занятия интересны для всех</string>
    <string name="questionHint6">1 - не объективен, 10 - объективен</string>
    <string name="questionHint7">1 - не пользуется и от этого страдает учебный процесс, 10 - активно использует</string>
    <string name="questionHint8">1 - не приводит, 10 - курс насыщен практическими примерами</string>
    <string name="questionHint9">1 - не успеваю ничего зафиксировать, 10 - успеваю все зафиксировать</string>
    <string name="questionHint10">1 - совершенно не соответствует, 10 - полностью соответствует</string>

</resources>
