<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.ucomplex.ucomplex.Activities.ReferenceActivity"
    tools:showIn="@layout/activity_reference">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/reference_descr"
        android:text="@string/reference_descr"
        android:textSize="20sp"
        android:textColor="#3f3f3f"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/org_name"
        android:id="@+id/reference_org_name"
        android:textSize="18sp"
        android:paddingBottom="5dp"
        android:textColor="#cdcdcd"
        android:layout_below="@+id/reference_descr"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/reference_field"
        android:lines="1"
        android:layout_below="@+id/reference_org_name"
        android:background="@drawable/textview_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reference_info"
        android:id="@+id/reference_info"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#cdcdcd"
        android:layout_below="@+id/reference_field"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reference_palce"
        android:id="@+id/reference_place"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#3f3f3f"
        android:layout_below="@+id/reference_info"
        />

    <Spinner
        android:layout_width="fill_parent"
        android:id="@+id/reference_place_choice"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reference_place"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/reference_send_button"
        android:textColor="#ffffff"
        android:text="@string/send_button"
        android:layout_below="@+id/reference_place_choice"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reference_more_info"
        android:id="@+id/reference_more_info"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#cdcdcd"
        android:layout_below="@+id/reference_send_button"
        />

</RelativeLayout>
